--- a/ClassGenerator/ClassGenerator.csproj
+++ b/ClassGenerator/ClassGenerator.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" />
+    </ItemGroup>
+
 </Project>
